Mon Sep 15 12:34:46 2003  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/egrep.y (yylex, member, egrep, cgotofn): Reindented.  Fixed
 	implicit int declarations and casts.

	* src/global.h (tolower, tolower) [BSD]: Fix override definitions
 	for these so they don't mung non-alphabetic input.

Fri Sep 12 09:33:19 2003  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/vp.h: Add #include of <sys/types.h> to fix problem on
 	Solaris.

Fri Sep 12 09:33:19 2003  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	I'm finally starting a new, GNU-format ChangeLog file.  The format
 	of the previous was too terse to be really useful.  This begins
 	with the first changes after release 15.5.
	
	* ChangeLog.old: New file.  Renamed copy of old-format ChangeLog
 	file.

	* ChangeLog: Started from scratch.

	